cmake_minimum_required (VERSION 3.9.0)
if (POLICY CMP0111)
cmake_policy(SET CMP0111 OLD)
endif ()
project (raims)
include_directories (
include
${CMAKE_SOURCE_DIR}/raimd/include
${CMAKE_SOURCE_DIR}/raikv/include
${CMAKE_SOURCE_DIR}/raids/include
${CMAKE_SOURCE_DIR}/sassrv/include
${CMAKE_SOURCE_DIR}/natsmd/include
${CMAKE_SOURCE_DIR}/libdecnumber/include
${CMAKE_SOURCE_DIR}/raimd/libdecnumber/include
${CMAKE_SOURCE_DIR}/linecook/include
${CMAKE_SOURCE_DIR}/pcre2
${CMAKE_SOURCE_DIR}/openpgm/openpgm/pgm/include
)
if (CMAKE_SYSTEM_NAME STREQUAL "Windows")
add_definitions(/DPCRE2_STATIC)
if ($<CONFIG:Release>)
add_compile_options (/arch:AVX2 /GL /std:c11 /wd5105)
else ()
add_compile_options (/arch:AVX2 /std:c11 /wd5105)
endif ()
if (NOT TARGET pcre2-8-static)
add_library (pcre2-8-static STATIC IMPORTED)
set_property (TARGET pcre2-8-static PROPERTY IMPORTED_LOCATION_DEBUG ../pcre2/build/Debug/pcre2-8-staticd.lib)
set_property (TARGET pcre2-8-static PROPERTY IMPORTED_LOCATION_RELEASE ../pcre2/build/Release/pcre2-8-static.lib)
add_library (pcre2-32-static STATIC IMPORTED)
set_property (TARGET pcre2-32-static PROPERTY IMPORTED_LOCATION_DEBUG ../pcre2/build/Debug/pcre2-32-staticd.lib)
set_property (TARGET pcre2-32-static PROPERTY IMPORTED_LOCATION_RELEASE ../pcre2/build/Release/pcre2-32-static.lib)
include_directories (../pcre2/build)
else ()
include_directories (${CMAKE_BINARY_DIR}/pcre2)
endif ()
set (pcre2lib pcre2-8-static pcre2-32-static)
if (NOT TARGET raids)
add_library (raids STATIC IMPORTED)
set_property (TARGET raids PROPERTY IMPORTED_LOCATION_DEBUG ../raids/build/Debug/raids.lib)
set_property (TARGET raids PROPERTY IMPORTED_LOCATION_RELEASE ../raids/build/Release/raids.lib)
endif ()
if (NOT TARGET raikv)
add_library (raikv STATIC IMPORTED)
set_property (TARGET raikv PROPERTY IMPORTED_LOCATION_DEBUG ../raikv/build/Debug/raikv.lib)
set_property (TARGET raikv PROPERTY IMPORTED_LOCATION_RELEASE ../raikv/build/Release/raikv.lib)
endif ()
if (NOT TARGET raimd)
add_library (raimd STATIC IMPORTED)
set_property (TARGET raimd PROPERTY IMPORTED_LOCATION_DEBUG ../raimd/build/Debug/raimd.lib)
set_property (TARGET raimd PROPERTY IMPORTED_LOCATION_RELEASE ../raimd/build/Release/raimd.lib)
endif ()
if (NOT TARGET decnumber)
add_library (decnumber STATIC IMPORTED)
set_property (TARGET decnumber PROPERTY IMPORTED_LOCATION_DEBUG ../raimd/libdecnumber/build/Debug/decnumber.lib)
set_property (TARGET decnumber PROPERTY IMPORTED_LOCATION_RELEASE ../raimd/libdecnumber/build/Release/decnumber.lib)
endif ()
if (NOT TARGET rdbparser)
add_library (rdbparser STATIC IMPORTED)
set_property (TARGET rdbparser PROPERTY IMPORTED_LOCATION_DEBUG ../raids/rdbparser/build/Debug/rdbparser.lib)
set_property (TARGET rdbparser PROPERTY IMPORTED_LOCATION_RELEASE ../raids/rdbparser/build/Release/rdbparser.lib)
endif ()
if (NOT TARGET linecook)
add_library (linecook STATIC IMPORTED)
set_property (TARGET linecook PROPERTY IMPORTED_LOCATION_DEBUG ../linecook/build/Debug/linecook.lib)
set_property (TARGET linecook PROPERTY IMPORTED_LOCATION_RELEASE ../linecook/build/Release/linecook.lib)
endif ()
if (NOT TARGET h3)
add_library (h3 STATIC IMPORTED)
set_property (TARGET h3 PROPERTY IMPORTED_LOCATION_DEBUG ../raids/h3/build/bin/Debug/h3.lib)
set_property (TARGET h3 PROPERTY IMPORTED_LOCATION_RELEASE ../raids/h3/build/bin/Release/h3.lib)
else ()
include_directories (${CMAKE_BINARY_DIR}/src/h3lib/include)
endif ()
if (NOT TARGET lzf)
add_library (lzf STATIC IMPORTED)
set_property (TARGET lzf PROPERTY IMPORTED_LOCATION_DEBUG ../raids/rdbparser/lzf/build/Debug/lzf.lib)
set_property (TARGET lzf PROPERTY IMPORTED_LOCATION_RELEASE ../raids/rdbparser/lzf/build/Release/lzf.lib)
endif ()
if (NOT TARGET openpgm_st)
add_library (openpgm_st STATIC IMPORTED)
set_property (TARGET openpgm_st PROPERTY IMPORTED_LOCATION_DEBUG ../openpgm/build/Debug/openpgm_st.lib)
set_property (TARGET openpgm_st PROPERTY IMPORTED_LOCATION_RELEASE ../openpgm/build/Release/openpgm_st.lib)
endif ()
if (NOT TARGET sassrv)
add_library (sassrv STATIC IMPORTED)
set_property (TARGET sassrv PROPERTY IMPORTED_LOCATION_DEBUG ../sassrv/build/Debug/sassrv.lib)
set_property (TARGET sassrv PROPERTY IMPORTED_LOCATION_RELEASE ../sassrv/build/Release/sassrv.lib)
endif ()
if (NOT TARGET natsmd)
add_library (natsmd STATIC IMPORTED)
set_property (TARGET natsmd PROPERTY IMPORTED_LOCATION_DEBUG ../natsmd/build/Debug/natsmd.lib)
set_property (TARGET natsmd PROPERTY IMPORTED_LOCATION_RELEASE ../natsmd/build/Release/natsmd.lib)
endif ()
else ()
add_compile_options (-Wall -Wextra -Werror -ggdb -mavx -maes -fno-omit-frame-pointer)
if (TARGET pcre2-8-static)
include_directories (${CMAKE_BINARY_DIR}/pcre2)
set (pcre2lib pcre2-8-static pcre2-32-static)
else ()
set (pcre2lib -lpcre2-32 -lpcre2-8)
endif ()
if (NOT TARGET raids)
add_library (raids STATIC IMPORTED)
set_property (TARGET raids PROPERTY IMPORTED_LOCATION ../raids/build/libraids.a)
endif ()
if (NOT TARGET raikv)
add_library (raikv STATIC IMPORTED)
set_property (TARGET raikv PROPERTY IMPORTED_LOCATION ../raikv/build/libraikv.a)
endif ()
if (NOT TARGET raimd)
add_library (raimd STATIC IMPORTED)
set_property (TARGET raimd PROPERTY IMPORTED_LOCATION ../raimd/build/libraimd.a)
endif ()
if (NOT TARGET decnumber)
add_library (decnumber STATIC IMPORTED)
set_property (TARGET decnumber PROPERTY IMPORTED_LOCATION ../raimd/libdecnumber/build/libdecnumber.a)
endif ()
if (NOT TARGET rdbparser)
add_library (rdbparser STATIC IMPORTED)
set_property (TARGET rdbparser PROPERTY IMPORTED_LOCATION ../raids/rdbparser/build/librdbparser.a)
endif ()
if (NOT TARGET linecook)
add_library (linecook STATIC IMPORTED)
set_property (TARGET linecook PROPERTY IMPORTED_LOCATION ../linecook/build/liblinecook.a)
endif ()
if (NOT TARGET h3)
add_library (h3 STATIC IMPORTED)
set_property (TARGET h3 PROPERTY IMPORTED_LOCATION ../raids/h3/build/lib/libh3.a)
else ()
include_directories (${CMAKE_BINARY_DIR}/src/h3lib/include)
endif ()
if (NOT TARGET lzf)
add_library (lzf STATIC IMPORTED)
set_property (TARGET lzf PROPERTY IMPORTED_LOCATION ../raids/rdbparser/lzf/build/liblzf.a)
endif ()
if (NOT TARGET openpgm_st)
add_library (openpgm_st STATIC IMPORTED)
set_property (TARGET openpgm_st PROPERTY IMPORTED_LOCATION ../openpgm/build/libopenpgm_st.a)
endif ()
if (NOT TARGET sassrv)
add_library (sassrv STATIC IMPORTED)
set_property (TARGET sassrv PROPERTY IMPORTED_LOCATION ../sassrv/build/libsassrv.a)
endif ()
if (NOT TARGET natsmd)
add_library (natsmd STATIC IMPORTED)
set_property (TARGET natsmd PROPERTY IMPORTED_LOCATION ../natsmd/build/libnatsmd.a)
endif ()
endif ()
if (CMAKE_SYSTEM_NAME STREQUAL "Windows")
set (ex_lib ws2_32)
else ()
set (ex_lib -lpthread -lrt)
endif ()
add_library (raims STATIC src/config.cpp src/user.cpp src/transport.cpp src/ev_tcp_transport.cpp src/ev_pgm_transport.cpp src/pgm_sock.cpp src/ev_inbox_transport.cpp src/ev_telnet.cpp src/ev_rv_transport.cpp src/ev_nats_transport.cpp src/ev_redis_transport.cpp src/msg.cpp src/session.cpp src/heartbeat.cpp src/user_db.cpp src/auth.cpp src/peer.cpp src/link_state.cpp src/sub.cpp src/pat.cpp src/crypt.cpp src/poly1305.cpp src/ec25519.cpp src/ed25519.cpp src/sha512.cpp src/aes.cpp src/gen_config.cpp src/console.cpp)
link_libraries (raims raids raikv raimd natsmd sassrv decnumber rdbparser linecook h3 lzf openpgm_st ${pcre2lib} ${ex_lib})
add_executable (ms_server src/server.cpp)
add_executable (ms_gen_key src/gen_key.cpp)
add_executable (kdftest test/kdftest.cpp)
add_executable (mactest test/mactest.cpp)
add_executable (polytest test/polytest.cpp)
add_executable (curvetest test/curvetest.cpp)
add_executable (dsatest test/dsatest.cpp)
add_executable (shatest test/shatest.cpp)
add_executable (aestest test/aestest.cpp)
add_executable (parse_config test/parse_config.cpp)
